--- a/index.html
+++ b/index.html
@@ -60,55 +60,33 @@
             <div>
                 <p href="" class="borderline"></p>
                 <h2 class="header-primary">Work Experience</h2>
-                <!-- <div class="workicon"><img src="pelion2.png" alt="logo pelion" width="50" height="50"> -->
-                <h3 class="job-name">PELION S.A. from 2021 </h3>
-                <!-- </div> -->
+                <div class="workicon"><img src="pelion2.png" alt="logo pelion" width="50" height="50">
+                    <h3 class="job-name">PELION S.A. since 2021 </h3>
+                </div>
                 <h3 class="job-name">
-                    Vice President of the Board — 2023
+                    Vice President of the Board and
+
+                    Head of Sales - Pharma Partner (since 2022)
                     <br>
-                    Head of Sales - Pharma Partner Medme Moja Apteka (2021 - 2023)
-                    <br>
-                    Chief Operational and Development Officer - Urtica Sp. z o.o.(2021 - 2022)
+                    Chief Operational and Development Officer - Urtica Sp. z o.o. (2021 - 2022)
                 </h3>
-                <p class="description">During my tenure, I lead the strategic development of applications and platforms
-                    to support pharmacies and pharmacy
-                    partners
-                    pharmacies, driving innovation in the e-pharmacy sector. My responsibilities include overseeing the
-                    development of key
-                    components, such as the pharmacist panel, guide and online store. In addition to providing top-notch
-                    services
-                    top level, my goal is to set new industry standards, resulting in increases in the number of
-                    users of the platform and increased customer loyalty, strengthening our presence in the e-pharmacy
-                    market.
+                <p class="description">
 
-                    As Head of Sales, I led the strategic development of the startup's sales department and specialized
-                    application for
-                    pharmaceutical partners
-                    pharmaceuticals and pharmacies. The role included cultivating strong customer relationships,
-                    managing budgets and
-                    striving to meet sales targets. In addition to numerical growth, I focused on improving solutions to
-                    meet the changing needs of customers.
-
-                    In addition, I oversaw the restructuring of two companies, implementing an innovative organizational
-                    framework including
-                    IT, Business
-                    Intelligence, development, innovation and marketing. This restructuring not only increased
-                    operational efficiency, but
-                    also
-                    fostered a culture of creativity and adaptability. These efforts have ensured the continued success
-                    of both companies in
-                    a competitive and
-                    ever-changing market landscape.
+                    Participation in the development of applications and business model, alongside an effective strategy for acquiring
+                    clients and business partners (800 pharmacies, constituting the third-largest virtual pharmacy network in Poland). <br>Full
+                    business and organizational responsibility for the entire company, including managing key processes and achieving
+                    ambitious business goals. Transformation of the structure of two companies and establishment of an innovative Division
+                    responsible for IT, Business Intelligence, Development, Innovation, and Marketing.
 
                 </p>
                 </p>
             </div>
             <div>
-                <!-- <div class="workicon"><img src="stndr.png" alt="logo pelion"> -->
-                <h3 class="job-name workicon">
-                    SANTANDER CONSUMER BANK S.A. - 2006 - 2021
-                </h3>
-                <!-- </div> -->
+                <div class="workicon"><img src="stndr.png" alt="logo pelion">
+                    <h3 class="job-name workicon">
+                        SANTANDER CONSUMER BANK S.A. - 2006 - 2021
+                    </h3>
+                </div>
                 <h3 class="job-name">
                     Deputy Director of the Consumer Credit Division (2019 – 2021)<br> Director of the Department of
                     Consumer Products and Sales
@@ -174,31 +152,34 @@
             </div>
             <div>
                 <!-- <div class="workicon"><img src="neonet.png" alt="logo pelion" width="50" height="50"> -->
+                <div class="workicon"><img src="neonet.png" alt="logo pelion">
+                    <h3 class="job-name workicon">
+                        NEONET S.A. - 2003 - 2006
+                    </h3>
+                </div>
                 <h3 class="job-name">
-                    Sales Execitive, Hire Purchase - Neonet S.A. (2003 - 2006)
-                </h3>
-                <!-- </div> -->
-                <p class="description">Deputy Sales Director (2003-2004 PIGO, Olsztyn)
-                    .</p>
+                    Sales Execitive, Hire Purchase - Neonet S.A. (2003 - 2006)<br>Deputy Sales Director (2003-2004 PIGO,
+                    Olsztyn)
+
             </div>
 
             <div>
                 <!-- <div class="workicon"><img src="zagiel.png" alt="logo pelion" width="50" height="50"> -->
-                <h3 class="job-name">
-                    Regional Hire Purchase Director - Żagiel S.A. (1999 - 2002)
-                </h3>
-                <!-- </div> -->
-
-                <p class="description">SKK Kredyt S.A., taken-over by Żagiel in 2002</p>
+                <div class="workicon"><img src="zagiel.png" alt="logo pelion">
+                    <h3 class="job-name workicon">ŻAGIEL S.A. 1999 - 2002</h3>
+                </div>
+                <h3 class="job-name">Regional Hire Purchase Director - (1999 - 2002)
+                    (SKK Kredyt, taken-over by Żagiel)</p>
             </div>
             <div>
 
-                <h3 class="job-name">
-                    Regional Director - Polskie Towarzystwo Finansowe System Gwarant S.A. (1996 - 1999)
-                </h3>
-
-                <!-- <p class="description">SKK Kredyt S.A.</p> -->
+                <!-- <div class="workicon"><img src="zagiel.png" alt="logo pelion"> -->
+                <h3 class="job-name workicon">PBF SYSTEM GWARANT S.A. - 1996 - 1999
+                    Regional Director and Branch Manager </h3>
             </div>
+
+            <!-- <p class="description">SKK Kredyt S.A.</p> -->
+            <!-- </div> -->
 
             <p class="underline"></p>
 
@@ -235,6 +216,8 @@
             <div class="education-block">
                 <h2 class="header-secondary">Education & trainings</h2>
                 <ul class="list-secondary">
+                    <li><span class="list-secondary-item">Institute of Economics, Polish Academy of Sciences, Executive MBA
+                            </span></li>
                     <li><span class="list-secondary-item">Wroclaw University of Economics and Business, Studia
                             Podyplomowe, Analiza Finansowa i Zarządzanie Wynikami</span></li>
                     <li><span class="list-secondary-item">WSB University in Wroclaw, Podyplomowe Studia Zarządzanie
@@ -246,36 +229,14 @@
 
                 </ul>
             </div>
-            <!-- <div class="languages-block">
-                <h2 class="header-secondary">Languages</h2>
-                <ul class="list-secondary">
-                    <li><span class="list-secondary-item">Polish - Native</span></li>
-                    <li><span class="list-secondary-item">English - elementary proficency</span></li>
-                </ul>
-            </div> -->
 
 
-            <!-- <div class="licences-block">
-                <h2 class="header-secondary">Licences & ceritfications</h2>
-                <ul class="list-secondary">
-
-                    <li>
-                        <span class="list-secondary-item">Certificate Fullstack Developer</span>
-                    </li>
-                    <li>
-                        <span class="list-secondary-item">Certified Internet Marketer Google</span>
-                    </li>
-                    <li>
-                        <span class="list-secondary-item">Skills of Tommorow Google and SGH Warsaw</span>
-                    </li>
-                </ul>
-            </div> -->
             <div class="interest-block">
                 <h2 class="header-secondary">Interests</h2>
                 <ul class="list-secondary">
-                    <li><span class="list-secondary-item"> travels </span></li>
-                    <li><span class="list-secondary-item"> sports fittnes </span></li>
-                    <li><span class="list-secondary-item"> biographical books and films</span></li>
+                    <li><span class="list-secondary-item"> Travels </span></li>
+                    <li><span class="list-secondary-item"> Sports fittnes </span></li>
+                    <li><span class="list-secondary-item"> Biographical books and films</span></li>
                     </p>
             </div>
         </aside>
