--- a/pl-index.html
+++ b/pl-index.html
@@ -56,49 +56,22 @@
             <div>
                 <p href="" class="borderline"></p>
                 <h2 class="header-primary">Work Experience</h2>
-                <h3 class="job-name">PELION S.A. from 2021</h3>
+                <div class="workicon"><img src="pelion2.png" alt="logo pelion" width="50" height="50">
+                    <h3 class="job-name">PELION S.A. od 2021</h3></div>
                 <h3 class="job-name">
-                    Wiceprezes - Pharma Partner Medme Moja Apteka — 2023
-
-
+                    Wiceprezes i Zarządzający Sprzedazą - Pharma Partner (od 2022)
                     <br>
-                    Zarządzający Sprzedazą - Pharma Partner Medme Moja Apteka — 2021 - 2023
-                    <br>
-                    Dyrektor Operacyjny i Rozwoju - Urtica Sp. z o.o.— 2021 - 2022
+                    Dyrektor Operacyjny i Rozwoju - Urtica Sp. z o.o. (2021 - 2022)
                 </h3>
-                <p class="description">Podczas mojej kadencji przewodzę strategicznemu rozwojowi aplikacji i platform
-                    wspierających apteki i partnerów
-                    aptecznych, napędzając innowacje w sektorze e-aptek. Do moich obowiązków należy nadzorowanie rozwoju
-                    kluczowych
-                    komponentów, takich jak panel farmaceuty, przewodnik i sklep internetowy. Oprócz świadczenia usług
-                    na
-                    najwyższym poziomie, moim celem jest ustanowienie nowych standardów branżowych, co przekłada się na
-                    wzrosty liczby
-                    użytkowników platformy i zwiększoną lojalnością klientów, wzmacniając naszą obecność na rynku
-                    e-aptek.
-
-                    Jako Head of Sales kierowałam strategicznym rozwojem działu sprzedaży startupu i specjalistycznej
-                    aplikacji dla partnerów
-                    farmaceutycznych i aptek. Rola ta obejmowała kultywowanie silnych relacji z klientami, zarządzanie
-                    budżetami i
-                    dązeniem do realizacji celów sprzedażowych. Oprócz wzrostu liczbowego, skupiłam się na udoskonalaniu
-                    rozwiązań w celu
-                    zaspokojenia zmieniających się potrzeb klientów.
-
-                    Ponadto nadzorowałam restrukturyzację dwóch spółek, wdrażając innowacyjne ramy organizacyjne
-                    obejmujące IT, Business
-                    Intelligence, rozwój, innowacje i marketing. Restrukturyzacja ta nie tylko zwiększyła wydajność
-                    operacyjną, ale także
-                    wsparła kulturę kreatywności i zdolności adaptacyjnych. Wysiłki te zapewniły ciągły sukces obu firm
-                    w konkurencyjnym i
-                    ciągle zmieniającym się krajobrazie rynkowym.
-
+                <p class="description">
+                Współuczestniczenie w opracowywaniu aplikacji oraz modelu biznesowego, wraz z efektywną strategią pozyskiwania klientów i partnerów biznesowych (800 aptek, co stanowi trzecią wirtualną sieć aptek w Polsce).<br> Pełna odpowiedzialność biznesowa i organizacyjna za calą spółkę włączając w to zarządzanie kluczowymi procesami i osiąganie ambitnych celów biznesowych.
+                    Przekształcenie struktury dwóch spółek i zbudowanie innowacyjnego Pionu odpowiedzialnego za dział IT, Business Intelligence, Rozwoju i Innowacji oraz Marketingu.
                 </p>
 
 
             </div>
-            <div>
-                <h3 class="job-name">SANTANDER CONSUMER BANK S.A. - 2006 - 2021</h3>
+            <div><div class="workicon"><img src="stndr.png" alt="logo pelion" width="50" height="50">
+                <h3 class="job-name">SANTANDER CONSUMER BANK S.A. - 2006 - 2021</h3></div>
                 <h3 class="job-name">
                     Zastępca Dyrektora Działu Kredytów Konsumenckich (2019 – 2021)<br> Dyrektor Działu Produktów
                     Konsumenckich i Dyrektor Działu Sprzedaży (2008 – 2019)
@@ -125,7 +98,7 @@
             <div>
 
                 <h3 class="job-name">
-                    Wiceprezes w Firmie Żagiel S.A. (2012 - 2013)
+                    Wiceprezes Żagiel S.A. (2012 - 2013)
                 </h3>
                 <p class="description">Skuteczna reorganizacja struktur sprzedaży i zachowanie zdefiniowanych obszarów
                     sprzedaży
@@ -164,27 +137,35 @@
             </div>
             <div>
 
-                <h3 class="job-name">
-                    Przedstawiciel Handlowy, Kredyty Ratalne - Neonet S.A. — 2003 - 2006
+            <div class="workicon"><img src="neonet.png" alt="logo pelion">
+                <h3 class="job-name workicon">
+                    NEONET S.A. - 2003 - 2006
                 </h3>
-                <p class="description">Zastępca Dyrektora Sprzedaży (2003-2004 PIGO, Olsztyn)
-                    .
-                </p>
+            </div>
+            <h3 class="job-name">
+                    Koordynator ds. Sprzedaży, Kredyty Ratalne (2003 - 2006)
+                
+               <br>Zastępca Dyrektora Sprzedaży (2003-2004 PIGO, Olsztyn)
+                </h3>
             </div>
 
             <div>
 
+                <div class="workicon"><img src="zagiel.png" alt="logo pelion">
+                    <h3 class="job-name workicon">ŻAGIEL S.A. 1999 - 2002</h3>
+                </div>
                 <h3 class="job-name">
-                    Regionalny Dyrektor Działu Kredytów Ratalnych - Żagiel S.A. — 1999 - 2002
-                </h3>
-
-                <p class="description">SKK Kredyt S.A., przejęty przez Żagiel w 2002 roku</p>
+                    Regionalny Dyrektor Działu Kredytów Ratalnych (1999 - 2002)
+                (SKK Kredyt S.A., przejęty przez Żagiel)
             </div>
             <div>
 
-                <h3 class="job-name">
-                    Regionalny Dyrektor - Polskie Towarzystwo Finansowe System Gwarant S.A. — 1996 - 1999
-                </h3>
+            <div>
+            
+                <!-- <div class="workicon"><img src="zagiel.png" alt="logo pelion"> -->
+                <h3 class="job-name workicon">PBF SYSTEM GWARANT S.A. - 1996 - 1999
+                    Dyrektor Regionalny i Kierownik Oddziału</h3>
+            </div>
 
                 <!-- <p class="description">SKK Kredyt S.A., przejęty przez Żagiel w 2002 roku</p>
             </div> -->
@@ -224,6 +205,8 @@
             <div class="education-block">
                 <h2 class="header-secondary">Edukacja i szkolenia</h2>
                 <ul class="list-secondary">
+                    <li><span class="list-secondary-item">Institute of Economics, Polish Academy of Sciences, Executive MBA</span></li>
+                    <li><span class="list-secondary-item">WSB Uniwersytet we Wrocławiu, Podyplomowe Studia Zarządzanie
                     <li><span class="list-secondary-item">Uniwersytet Ekonomiczny we Wrocławiu, Studia Podyplomowe,
                             Analiza
                             Finansowa i Zarządzanie Wynikami</span></li>
@@ -264,9 +247,9 @@
             <div class="interest-block">
                 <h2 class="header-secondary">Zainteresowania</h2>
                 <ul class="list-secondary">
-                    <li><span class="list-secondary-item"> podróże </span></li>
-                    <li><span class="list-secondary-item"> sport i fitness </span></li>
-                    <li><span class="list-secondary-item"> biografie książek i filmów</span></li>
+                    <li><span class="list-secondary-item"> Podróże </span></li>
+                    <li><span class="list-secondary-item"> Sport i fitness </span></li>
+                    <li><span class="list-secondary-item"> Biografie książek i filmów</span></li>
                     </p>
             </div>
         </aside>
