fix bug and add texts

--- a/pl-index.html
+++ b/pl-index.html
@@ -38,9 +38,9 @@
                 <p class="description key-skills">
                     Lider Agile Organization.<br>
                     Dwudziestoletnie doświadczenie w zarządzaniu sprzedażą oraz w rozwoju produktów i usług w sektorze
-                    finansowym w tradycyjnych i cyfrowych kanałach sprzedaży.<br>
-                    Doświadczenie w budowie i realizacji produktów finansowania konsumenckiego, w połączeniu z wiedzą
-                    na temat oczekiwań i potrzeb konsumentów.<br>
+                    finansowym i farmaceutycznym w tradycyjnych i cyfrowych kanałach sprzedaży.<br>
+                    Doświadczenie w budowie i realizacji produktów, w połączeniu z wiedzą
+                    na temat oczekiwań i potrzeb konsumentów i klientów B2B.<br>
                     Umiejętność zarządzania zespołami terenowymi i dużymi jednostkami na miejscu.<br>
                     Doświadczenie w wdrażaniu transformacji znacznej części firmy w tryb agile oraz efektywne
                     zarządzanie taką strukturą.<br>
@@ -64,8 +64,8 @@
                     Dyrektor Operacyjny i Rozwoju - Urtica Sp. z o.o. (2021 - 2022)
                 </h3>
                 <p class="description">
-                Współuczestniczenie w opracowywaniu aplikacji oraz modelu biznesowego, wraz z efektywną strategią pozyskiwania klientów i partnerów biznesowych (800 aptek, co stanowi trzecią wirtualną sieć aptek w Polsce).<br> Pełna odpowiedzialność biznesowa i organizacyjna za calą spółkę włączając w to zarządzanie kluczowymi procesami i osiąganie ambitnych celów biznesowych.
-                    Przekształcenie struktury dwóch spółek i zbudowanie innowacyjnego Pionu odpowiedzialnego za dział IT, Business Intelligence, Rozwoju i Innowacji oraz Marketingu.
+                Współuczestniczenie w opracowywaniu aplikacji oraz modelu biznesowego, wraz z efektywną strategią pozyskiwania klientów i partnerów biznesowych (800 aptek, co stanowi trzecią wirtualną sieć aptek w Polsce).<br> Pełna odpowiedzialność biznesowa i organizacyjna za calą spółkę włączając w to zarządzanie kluczowymi procesami i osiąganie ambitnych celów biznesowych.<br>
+                   Jako Dyrektor Operacyjny Przekształcenie struktury dwóch spółek i zbudowanie innowacyjnego Pionu odpowiedzialnego za dział IT, Business Intelligence, Rozwoju i Innowacji oraz Marketingu.
                 </p>
 
 
@@ -160,13 +160,7 @@
             </div>
             <div>
 
-            <div>
-            
-                <!-- <div class="workicon"><img src="zagiel.png" alt="logo pelion"> -->
-                <h3 class="job-name workicon">PBF SYSTEM GWARANT S.A. - 1996 - 1999
-                    Dyrektor Regionalny i Kierownik Oddziału</h3>
-            </div>
-
+          
                 <!-- <p class="description">SKK Kredyt S.A., przejęty przez Żagiel w 2002 roku</p>
             </div> -->
 
