--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                 <h2 class="header-primary">Key skills</h2>
 
                 <p class="description key-skills">Agile Organization Leader.<br>
-                    Twenty years off experience in sales management and product and services development in financial
+                    Twenty years off experience in sales management and product and services development in financial and pharmacy
                     sector in
                     traditional and digital sales channels.<br>
-                    Experience in building and execution of consumer finance products ,combain with knowledge of
+                    Experience in building and execution of products, combain with knowledge of
                     consumer expectations and
                     needs.<br>
                     Ability to manage fild teams and large on-site units.<br>
@@ -75,7 +75,7 @@
                     Participation in the development of applications and business model, alongside an effective strategy for acquiring
                     clients and business partners (800 pharmacies, constituting the third-largest virtual pharmacy network in Poland). <br>Full
                     business and organizational responsibility for the entire company, including managing key processes and achieving
-                    ambitious business goals. Transformation of the structure of two companies and establishment of an innovative Division
+                    ambitious business goals. <br>As the Chief Operational Officer, transformation  of the structure of two companies and establishment of an innovative Division
                     responsible for IT, Business Intelligence, Development, Innovation, and Marketing.
 
                 </p>
@@ -171,15 +171,9 @@
                 <h3 class="job-name">Regional Hire Purchase Director - (1999 - 2002)
                     (SKK Kredyt, taken-over by Żagiel)</p>
             </div>
-            <div>
+           
 
-                <!-- <div class="workicon"><img src="zagiel.png" alt="logo pelion"> -->
-                <h3 class="job-name workicon">PBF SYSTEM GWARANT S.A. - 1996 - 1999
-                    Regional Director and Branch Manager </h3>
-            </div>
-
-            <!-- <p class="description">SKK Kredyt S.A.</p> -->
-            <!-- </div> -->
+               
 
             <p class="underline"></p>
 
