style and dead code

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                 <h2 class="header-primary">Key skills</h2>
 
                 <p class="description key-skills">Agile Organization Leader.<br>
-                    Twenty years off experience in sales management and product and services development in financial and pharmacy
+                    Twenty years off experience in sales management and product and services development in financial
+                    and pharmacy
                     sector in
                     traditional and digital sales channels.<br>
                     Experience in building and execution of products, combain with knowledge of
@@ -72,10 +73,14 @@
                 </h3>
                 <p class="description">
 
-                    Participation in the development of applications and business model, alongside an effective strategy for acquiring
-                    clients and business partners (800 pharmacies, constituting the third-largest virtual pharmacy network in Poland). <br>Full
-                    business and organizational responsibility for the entire company, including managing key processes and achieving
-                    ambitious business goals. <br>As the Chief Operational Officer, transformation  of the structure of two companies and establishment of an innovative Division
+                    Participation in the development of applications and business model, alongside an effective strategy
+                    for acquiring
+                    clients and business partners (800 pharmacies, constituting the third-largest virtual pharmacy
+                    network in Poland). <br>Full
+                    business and organizational responsibility for the entire company, including managing key processes
+                    and achieving
+                    ambitious business goals. <br>As the Chief Operational Officer, transformation of the structure of
+                    two companies and establishment of an innovative Division
                     responsible for IT, Business Intelligence, Development, Innovation, and Marketing.
 
                 </p>
@@ -171,9 +176,9 @@
                 <h3 class="job-name">Regional Hire Purchase Director - (1999 - 2002)
                     (SKK Kredyt, taken-over by Żagiel)</p>
             </div>
-           
 
-               
+
+
 
             <p class="underline"></p>
 
@@ -210,8 +215,9 @@
             <div class="education-block">
                 <h2 class="header-secondary">Education & trainings</h2>
                 <ul class="list-secondary">
-                    <li><span class="list-secondary-item">Institute of Economics, Polish Academy of Sciences, Executive MBA
-                            </span></li>
+                    <li><span class="list-secondary-item">Institute of Economics, Polish Academy of Sciences, Executive
+                            MBA
+                        </span></li>
                     <li><span class="list-secondary-item">Wroclaw University of Economics and Business, Studia
                             Podyplomowe, Analiza Finansowa i Zarządzanie Wynikami</span></li>
                     <li><span class="list-secondary-item">WSB University in Wroclaw, Podyplomowe Studia Zarządzanie
