--- a/pl-index.html
+++ b/pl-index.html
@@ -65,7 +65,8 @@
                 </h3>
                 <p class="description">
                 Współuczestniczenie w opracowywaniu aplikacji oraz modelu biznesowego, wraz z efektywną strategią pozyskiwania klientów i partnerów biznesowych (800 aptek, co stanowi trzecią wirtualną sieć aptek w Polsce).<br> Pełna odpowiedzialność biznesowa i organizacyjna za calą spółkę włączając w to zarządzanie kluczowymi procesami i osiąganie ambitnych celów biznesowych.<br>
-                   Jako Dyrektor Operacyjny Przekształcenie struktury dwóch spółek i zbudowanie innowacyjnego Pionu odpowiedzialnego za dział IT, Business Intelligence, Rozwoju i Innowacji oraz Marketingu.
+                Jako Dyrektor Operacyjny, przekształcenie struktury dwóch spółek i zbudowanie innowacyjnego Pionu odpowiedzialnego za
+                działy IT, Business Intelligence, Rozwoju i Innowacji oraz Marketingu..
                 </p>
 
 
