--- a/index.html
+++ b/index.html
@@ -183,8 +183,9 @@
             <p class="underline"></p>
 
         </main>
-        <aside>
+        <aside><a href="pl-index.html">
             <img class="cv-photo" src="foto.png" width="300" height="auto" alt="Photography" />
+           </a>
             <div class="contact-block">
                 <h2 class="header-secondary">Personal data</h2>
                 <p class="contact-links">
