--- a/pl-index.html
+++ b/pl-index.html
@@ -169,7 +169,8 @@
 
         </main>
         <aside>
-            <img class="cv-photo" src="foto.png" width="300" height="auto" alt="Fotografia" />
+            <a href="index.html">
+            <img class="cv-photo" src="foto.png" width="300" height="auto" alt="Fotografia" /></a>
             <div class="contact-block">
                 <h2 class="header-secondary">Dane osobowe</h2>
                 <p class="contact-links">
