change work exp

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </h3>
                 <p class="description">
 
-                    Participation in the development of applications and business model, alongside an effective strategy
+                    <!-- Participation in the development of applications and business model, alongside an effective strategy
                     for acquiring
                     clients and business partners (800 pharmacies, constituting the third-largest virtual pharmacy
                     network in Poland). <br>Full
@@ -81,8 +81,17 @@
                     and achieving
                     ambitious business goals. <br>As the Chief Operational Officer, transformation of the structure of
                     two companies and establishment of an innovative Division
-                    responsible for IT, Business Intelligence, Development, Innovation, and Marketing.
-
+                    responsible for IT, Business Intelligence, Development, Innovation, and Marketing. -->
+Building and expanding the Medme Moja Apteka customer application (iOS/Android) along with the business model,
+accompanied by an effective strategy for acquiring customers and business partners.
+<br>Establishment of the third virtual pharmacy network in Poland - from 0 to 800.
+<br>Development of marketing strategy. Expansion of the project team.
+<br>Full business and organizational responsibility for the entire company, including managing key processes and
+achieving ambitious business goals.
+<br>Identifying inefficient or ineffective areas and implementing process changes through digitization, automation,
+reorganization, restructuring, centralization, and outsourcing.
+<br>As the Chief Operating Officer, transformation of the structure of two companies and establishment of an innovative
+Division responsible for IT, Business Intelligence, Development, Innovation, and Marketing.
                 </p>
                 </p>
             </div>
