--- a/pl-index.html
+++ b/pl-index.html
@@ -64,9 +64,14 @@
                     Dyrektor Operacyjny i Rozwoju - Urtica Sp. z o.o. (2021 - 2022)
                 </h3>
                 <p class="description">
-                Współuczestniczenie w opracowywaniu aplikacji oraz modelu biznesowego, wraz z efektywną strategią pozyskiwania klientów i partnerów biznesowych (800 aptek, co stanowi trzecią wirtualną sieć aptek w Polsce).<br> Pełna odpowiedzialność biznesowa i organizacyjna za calą spółkę włączając w to zarządzanie kluczowymi procesami i osiąganie ambitnych celów biznesowych.<br>
+                Zbudowanie i rozwinięcie aplikacji customerowej Medme Moja Apteka (iOS/Android) oraz modelu biznesowego, wraz z efektywną strategią pozyskiwania klientów i partnerów biznesowych.
+                <br> Zbudowanie trzeciej wirtualnej sieci aptek w Polsce - od 0 do 800.
+                <br> Budowa strategii marketingowej. Rozbudowa zespołu projektowego.
+                <br> Pełna odpowiedzialność biznesowa i organizacyjna za calą spółkę włączając w to zarządzanie kluczowymi procesami i osiąganie ambitnych celów biznesowych.
+                <br>Identyfikowanie nieefektywnych lub nieskutecznych obszarów i  wdrażanie zmian procesów poprzez cyfryzację, automatyzację, reorganizację, restrukturyzację, centralizację i outsourcing. <br>
                 Jako Dyrektor Operacyjny, przekształcenie struktury dwóch spółek i zbudowanie innowacyjnego Pionu odpowiedzialnego za
-                działy IT, Business Intelligence, Rozwoju i Innowacji oraz Marketingu..
+                działy IT, Business Intelligence, Rozwoju i Innowacji oraz Marketingu.
+                <br>
                 </p>
 
 
