--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     responsible for IT, Business Intelligence, Development, Innovation, and Marketing. -->
 Building and expanding the Medme Moja Apteka customer application (iOS/Android) along with the business model,
 accompanied by an effective strategy for acquiring customers and business partners.
-<br>Establishment of the third virtual pharmacy network in Poland - from 0 to 800.
+<br>Establishment of the third virtual pharmacy network in Poland - from 0 to 800 pharmacies with innovative access to the widest range of products on the market.
 <br>Development of marketing strategy. Expansion of the project team.
 <br>Full business and organizational responsibility for the entire company, including managing key processes and
 achieving ambitious business goals.
