--- a/pl-index.html
+++ b/pl-index.html
@@ -65,7 +65,7 @@
                 </h3>
                 <p class="description">
                 Zbudowanie i rozwinięcie aplikacji customerowej Medme Moja Apteka (iOS/Android) oraz modelu biznesowego, wraz z efektywną strategią pozyskiwania klientów i partnerów biznesowych.
-                <br> Zbudowanie trzeciej wirtualnej sieci aptek w Polsce - od 0 do 800.
+                <br> Zbudowanie trzeciej wirtualnej sieci aptek w Polsce - od 0 do 800 aptek z innowacyjnym dostępem do najszerszego asortymentu na rynku.
                 <br> Budowa strategii marketingowej. Rozbudowa zespołu projektowego.
                 <br> Pełna odpowiedzialność biznesowa i organizacyjna za calą spółkę włączając w to zarządzanie kluczowymi procesami i osiąganie ambitnych celów biznesowych.
                 <br>Identyfikowanie nieefektywnych lub nieskutecznych obszarów i  wdrażanie zmian procesów poprzez cyfryzację, automatyzację, reorganizację, restrukturyzację, centralizację i outsourcing. <br>
