delete pharma and urtica

--- a/index.html
+++ b/index.html
@@ -67,9 +67,11 @@
                 <h3 class="job-name">
                     Vice President of the Board and
 
-                    Head of Sales - Pharma Partner (since 2022)
+                    Head of Sales 
+                    <!-- - Pharma Partner (since 2022) -->
                     <br>
-                    Chief Operational and Development Officer - Urtica Sp. z o.o. (2021 - 2022)
+                    Chief Operational and Development Officer 
+                    <!-- - Urtica Sp. z o.o. (2021 - 2022) -->
                 </h3>
                 <p class="description">
 
