--- a/pl-index.html
+++ b/pl-index.html
@@ -59,9 +59,11 @@
                 <div class="workicon"><img src="pelion2.png" alt="logo pelion" width="50" height="50">
                     <h3 class="job-name">PELION S.A. od 2021</h3></div>
                 <h3 class="job-name">
-                    Wiceprezes i Zarządzający Sprzedazą - Pharma Partner (od 2022)
+                    Wiceprezes i Zarządzający Sprzedazą 
+                    <!-- - Pharma Partner (od 2022) -->
                     <br>
-                    Dyrektor Operacyjny i Rozwoju - Urtica Sp. z o.o. (2021 - 2022)
+                    Dyrektor Operacyjny i Rozwoju
+                     <!-- - Urtica Sp. z o.o. (2021 - 2022) -->
                 </h3>
                 <p class="description">
                 Zbudowanie i rozwinięcie aplikacji customerowej Medme Moja Apteka (iOS/Android) oraz modelu biznesowego, wraz z efektywną strategią pozyskiwania klientów i partnerów biznesowych.
